<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingLeft="16dip"
            android:paddingBottom="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_number_title" />
        <EditText
            android:id="@+id/telephone_number"
            android:paddingLeft="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/enter_telephone_number"
            android:imeOptions="actionNext"/>
            <requestFocus/>
        <TextView
            android:paddingLeft="16dip"
            android:paddingBottom="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conference_id_title" />
        <EditText
            android:id="@+id/conference_id"
            android:paddingLeft="8dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/enter_conference_id"
            android:imeOptions="actionDone"/>
    </LinearLayout>
    <!-- BUTTONS -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center"
        android:layout_marginBottom="4dip"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/conf_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/edit_event_label" />
        <Button
            android:id="@+id/conf_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/delete_label" />
    </LinearLayout>
</LinearLayout>
